--- a/CS Blogs/src/main/res/values/strings.xml
+++ b/CS Blogs/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CS Blogs</string>
+    <string name="title_activity_view_blog">ViewBlogActivity</string>
+    <string name="action_settings">Settings</string>
 </resources>
