update drawer layout

--- a/CS Blogs/src/main/res/values/strings.xml
+++ b/CS Blogs/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CS Blogs</string>
     <string name="bloggers">Bloggers</string>
+    <string name="latest_blogs">Latest Blogs</string>
 </resources>
